# blackhole-encryption

./: LICENSE  README.md
benchmarks/: benchmark_core.py  benchmark_fec.py
docs/: ARCHITECTURE.md
python/: blackhole_real.py
scripts/: build.sh  run_full_test.sh
src/core/: bh_neptunian.cpp  bh_quantum_tweak.cpp
src/crypto/: CMakeLists.txt  chacha20.cpp
src/fec/: ldpc.cpp  reedsolomon.cpp  tornado.cpp
src/gpu/: bh_self_healing_gpu.sycl
tests/: full_suite.py  test_blackhole.py  test_fec.py
